Use new mechanism to disable plugin
Updated readme

--- a/plugins/cpanel-rule-exclusions-before.conf
+++ b/plugins/cpanel-rule-exclusions-before.conf
@@ -16,6 +16,10 @@
 # Documentation can be found here:
 # https://github.com/coreruleset/cpanel-rule-exclusions
 
+# Generic rule to disable plugin
+SecRule TX:cpanel-rule-exclusions-plugin_enabled "@eq 0" "id:9510099,phase:1,pass,nolog,ctl:ruleRemoveById=9510100-9510999"
+
+
 # These exclusions remedy false positives in a default cPanel environment.
 
 #
