--- a/tests/regression/cpanel-plugin/9510100.yaml
+++ b/tests/regression/cpanel-plugin/9510100.yaml
@@ -1,6 +1,6 @@
 ---
 meta:
-  author: "Felipe Zipitria"
+  author: "Felipe Zipitria, azurit"
   description: "CPanel Plugin"
   enabled: true
   name: 9510100.yaml
@@ -13,10 +13,11 @@ tests:
             dest_addr: 127.0.0.1
             headers:
               Host: localhost
-              User-Agent: OWASP CRS
+              User-Agent: "OWASP CRS test agent"
               Accept: text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5
             port: 80
             method: GET
-            uri: /whm-server-status
+            version: HTTP/1.1
+            uri: /get/whm-server-status
           output:
             no_log_contains: id "920280"
