--- a/tests/regression/cpanel-plugin/9510100.yaml
+++ b/tests/regression/cpanel-plugin/9510100.yaml
@@ -1,23 +1,23 @@
 ---
 meta:
   author: "Felipe Zipitria, azurit"
-  description: "CPanel Plugin"
+  description: "cPanel Rule Exclusions Plugin"
   enabled: true
   name: 9510100.yaml
 tests:
-  - test_title: 9510100-1
+  - test_id: 1
     desc: Cpanel plugin
     stages:
-      - stage:
-          input:
-            dest_addr: 127.0.0.1
-            headers:
-              Host: localhost
-              User-Agent: "OWASP CRS test agent"
-              Accept: text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5
-            port: 80
-            method: GET
-            version: HTTP/1.1
-            uri: /get/whm-server-status
-          output:
-            no_log_contains: id "920280"
+      - input:
+          dest_addr: 127.0.0.1
+          headers:
+            Host: localhost
+            User-Agent: "OWASP CRS test agent"
+            Accept: text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5
+          port: 80
+          method: GET
+          version: HTTP/1.1
+          uri: /get/whm-server-status
+        output:
+          log:
+            no_expect_ids: [920280]
